--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
     "private": true,
     "name": "core-tester-script",
     "description": "A simple command line utility to create and broadcast transactions.",
-    "scripts": {},
+    "scripts": {
+        "start": "node ./index.js",
+        "dev": "nodemon ./index.js"
+    },
     "dependencies": {
         "@arkecosystem/crypto": "^2.6.0-next.1",
         "@arkecosystem/core-utils": "^2.6.0-next.1",
         "@arkecosystem/core-magistrate-crypto": "^2.6.0-next.1"
+    },
+    "devDependencies": {
+        "nodemon": "^1.19.4"
     }
 }
